--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vite-plugin-ruby": "^5.1.1"
   },
@@ -19,6 +28,10 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "check": "tsc -p tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "tsc -p tsconfig.app.json && tsc -p tsconfig.node.json",
+    "lint": "eslint app/frontend --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --check 'app/frontend/**/*.{ts,tsx,js}'",
+    "format:fix": "npm run format -- --write"
   }
 }
