--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.3"
   },
   "scripts": {
