--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,21 @@
 service: inertia_rails_shadcn_starter
 
 # Name of the container image.
-image: skryukov/inertia_rails_shadcn_starter
+image: your-user/inertia_rails_shadcn_starter
 
 # Deploy to these servers.
 servers:
   web:
-    - 204.48.24.117
+    - 192.168.0.1
+
+  # Uncomment to enable SSR:
+  # vite_ssr:
+  #   hosts:
+  #     - 192.168.0.1
+  #   cmd: bundle exec vite ssr
+  #   options:
+  #     network-alias: vite_ssr
+
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,12 +28,14 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: inertia-shadcn.skryukov.dev
+  host: app.example.com
 
 # Credentials for your image host.
 registry:
-  server: ghcr.io
-  username: skryukov
+  # Specify the registry server, if you're not using Docker Hub
+  # server: registry.digitalocean.com / ghcr.io / ...
+  username: your-user
+
   # Always use an access token rather than real password when possible.
   password:
     - KAMAL_REGISTRY_PASSWORD
@@ -37,6 +48,10 @@ env:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
+
+    # Uncomment to enable SSR:
+    # INERTIA_SSR_ENABLED: true
+    # INERTIA_SSR_URL: "http://vite_ssr:13714"
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
@@ -74,9 +89,11 @@ asset_path: /rails/public
 # Configure the image builder.
 builder:
   arch: amd64
+  # Uncomment to enable SSR:
+  # dockerfile: Dockerfile-ssr
   cache:
     type: registry
-    image: skryukov/inertia_rails_shadcn_starter-build-cache
+    image: your-user/inertia_rails_shadcn_starter-build-cache
     options: mode=max
 
   # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
